--- a/index.html
+++ b/index.html
@@ -5,9 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #baitap-3 {
+            background-color: orange;
+            width: 100%;
+            height: 30vh;
+        }
+        #content {
+            display: none;
+            font-size: 20px;
+            color: white;
+        }
+
+        #btn, #btn-2 {
+            outline: none;
+            padding: 10px 20px;
+            border: none;
+            font-size: 20px;
+            margin-left: 50px;
+            border-radius: 20px;
+        }
+        #btn-2 {
+            display: block;
+            margin:  20px auto;
+            background-color: aqua;
+        }
+        .content-bt {
+            font-size: 25px;
+            text-align: center;
+            display: none;
+        }
+    </style>
 </head>
 <body>
-    
-    <script src="./homework-b2.js"></script>
+    <div id="baitap-1">
+
+    </div>
+
+    <div id="baitap-2">
+        <p></p>
+        <p></p>
+    </div>
+
+    <div id="baitap-3">
+        <h2>
+            Bài tập 3:
+        </h2>
+        <button id="btn" onclick="displayTest()">Click me!</button>
+        <p id="content">
+            Hello anh Quang
+        </p>
+    </div>
+
+    <div id="baitap-3-3">
+        <button id="btn-2" ondblclick="displayContent()">Bảo Trì!</button>
+        <h3 class="content-bt">
+            Page Bảo Trì!
+        </h3>
+    </div>
+    <script src="./homework-js-b3.js"></script>
 </body>
 </html>
