--- a/index.html
+++ b/index.html
@@ -1,68 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        #baitap-3 {
-            background-color: orange;
-            width: 100%;
-            height: 30vh;
-        }
-        #content {
-            display: none;
-            font-size: 20px;
-            color: white;
-        }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Project #2 - Image Gallery Pop up</title>
+  </head>
+  <body>
+    <div class="menu">
+      <div class="menu-nav">
+        <ul>
+          <!-- Có thể dùng href="#id" và scroll-behavior: smooth; trong css -->
+          <!-- Nhưng nhớ làm = JS nha -->
+          <li><a class="nav-link" attr-id="gallery" onclick="sectionGallery()">Galley</a></li>
+          <li><a class="nav-link" attr-id="books" onclick="sectionBook()">Books</a></li>
+          <li><a class="nav-link" attr-id="students" onclick="sectionStudents()">Students</a></li>
+          <li><a class="nav-link" attr-id="color" onclick="sectionColor()">Colors</a></li>
+        </ul>
+      </div>
+    </div>
+    <section id="gallery" class="gallery">
+    
+      <!-- Image 1 -->
+      <div class="img-container">
+        <img src="img/small/pexels-anna-shvets-4588065.jpg" alt="1" />
+      </div>
 
-        #btn, #btn-2 {
-            outline: none;
-            padding: 10px 20px;
-            border: none;
-            font-size: 20px;
-            margin-left: 50px;
-            border-radius: 20px;
-        }
-        #btn-2 {
-            display: block;
-            margin:  20px auto;
-            background-color: aqua;
-        }
-        .content-bt {
-            font-size: 25px;
-            text-align: center;
-            display: none;
-        }
-    </style>
-</head>
-<body>
-    <div id="baitap-1">
+      <!-- Image 2 -->
+      <div class="img-container">
+        <img src="img/small/pexels-anthony-139639.jpg" alt="2" />
+      </div>
 
+      <!-- Image 3 -->
+      <div class="img-container">
+        <img src="img/small/pexels-burst-374825.jpg" alt="3" />
+      </div>
+
+      <!-- Image 4 -->
+      <div class="img-container">
+        <img src="img/small/pexels-carlos-spitzer-17811.jpg" alt="4" />
+      </div>
+
+      <!-- Image 5 -->
+      <div class="img-container">
+        <img src="img/small/pexels-charles-1851164.jpg" alt="5" />
+      </div>
+
+      <!-- Image 6 -->
+      <div class="img-container">
+        <img src="img/small/pexels-frans-van-heerden-631292.jpg" alt="6" />
+      </div>
+
+      <!-- Image 7 -->
+      <div class="img-container">
+        <img src="img/small/pexels-gratisography-4602.jpg" alt="7" />
+      </div>
+
+      <!-- Image 8 -->
+      <div class="img-container">
+        <img src="img/small/pexels-jan-kopřiva-3614358.jpg" alt="8" />
+      </div>
+
+      <!-- Image 9 -->
+      <div class="img-container">
+        <img src="img/small/pexels-jeremy-bishop-2422915.jpg" alt="9" />
+      </div>
+      <!-- Image 10 -->
+      <div class="img-container">
+        <img src="img/small/pexels-jim-long-949859.jpg" alt="10" />
+      </div>
+    </section>
+    <div id="books" class="section-default">
+      <h2>Section Books</h2>
     </div>
 
-    <div id="baitap-2">
-        <p></p>
-        <p></p>
+    <div id="students" class="section-default">
+      <h2>Section Students</h2>
     </div>
 
-    <div id="baitap-3">
-        <h2>
-            Bài tập 3:
-        </h2>
-        <button id="btn" onclick="displayTest()">Click me!</button>
-        <p id="content">
-            Hello anh Quang
-        </p>
+    <div id="colors" class="section-default">
+      <h2 id="color-content">Section Color</h2>
+      <p id="color-text"></p>
+      <button id="changecolor" type="submit">
+        Switch
+      </button>
+      <div id="color">
+
+      </div>
     </div>
 
-    <div id="baitap-3-3">
-        <button id="btn-2" ondblclick="displayContent()">Bảo Trì!</button>
-        <h3 class="content-bt">
-            Page Bảo Trì!
-        </h3>
+    <!-- modal -->
+    <div class="modal" id="modal-1">
+      <img src="img/full/1.jpg" alt="" class="full-img" />
     </div>
-    <script src="./homework-js-b3.js"></script>
-</body>
+
+    <div id="btn-top">
+      <h2>^</h2>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
 </html>
