--- a/index.html
+++ b/index.html
@@ -5,97 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Project #2 - Image Gallery Pop up</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   </head>
   <body>
-    <div class="menu">
-      <div class="menu-nav">
-        <ul>
-          <!-- Có thể dùng href="#id" và scroll-behavior: smooth; trong css -->
-          <!-- Nhưng nhớ làm = JS nha -->
-          <li><a class="nav-link" attr-id="gallery" onclick="sectionGallery()">Galley</a></li>
-          <li><a class="nav-link" attr-id="books" onclick="sectionBook()">Books</a></li>
-          <li><a class="nav-link" attr-id="students" onclick="sectionStudents()">Students</a></li>
-          <li><a class="nav-link" attr-id="color" onclick="sectionColor()">Colors</a></li>
-        </ul>
+    <div id="app">
+      <div class="menu">
+        <div class="menu-nav">
+          <ul>
+            <li v-for="(item, index) in menus" :key="index">
+              {{ item.menu }}
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <section id="gallery" class="gallery">
-    
-      <!-- Image 1 -->
-      <div class="img-container">
-        <img src="img/small/pexels-anna-shvets-4588065.jpg" alt="1" />
+      <section id="gallery" class="gallery">
+      
+        <!-- Image 1 -->
+        <div class="img-container" v-for="(image, index) in listImages" :key="index" @click="displayImage($event)">
+          <img :src="image.image" :alt="image.alt" @click="clicked = index"/>
+        </div>
+  
+      </section>
+      <div id="books" class="section-default">
+        <h2>Section Books</h2>
       </div>
-
-      <!-- Image 2 -->
-      <div class="img-container">
-        <img src="img/small/pexels-anthony-139639.jpg" alt="2" />
+  
+      <div id="students" class="section-default">
+        <h2>Section Students</h2>
       </div>
-
-      <!-- Image 3 -->
-      <div class="img-container">
-        <img src="img/small/pexels-burst-374825.jpg" alt="3" />
+  
+      <div id="colors" class="section-default">
+        <h2 id="color-content">Section Color</h2>
+        <p id="color-text"></p>
+        <button id="changecolor" type="submit" @click="switchColor()">
+          Switch
+        </button>
+        <div id="color">
+  
+        </div>
       </div>
-
-      <!-- Image 4 -->
-      <div class="img-container">
-        <img src="img/small/pexels-carlos-spitzer-17811.jpg" alt="4" />
+  
+      <!-- modal small img -->
+      <div class="modal" id="modal-1">
+        <img :src="`img/full/${clicked + 1}.jpg`" alt="" class="full-img " />
+        <p @click="hideImage()" class="description">X</p>
       </div>
-
-      <!-- Image 5 -->
-      <div class="img-container">
-        <img src="img/small/pexels-charles-1851164.jpg" alt="5" />
+  
+      <div id="btn-top">
+        <h2>^</h2>
       </div>
-
-      <!-- Image 6 -->
-      <div class="img-container">
-        <img src="img/small/pexels-frans-van-heerden-631292.jpg" alt="6" />
-      </div>
-
-      <!-- Image 7 -->
-      <div class="img-container">
-        <img src="img/small/pexels-gratisography-4602.jpg" alt="7" />
-      </div>
-
-      <!-- Image 8 -->
-      <div class="img-container">
-        <img src="img/small/pexels-jan-kopřiva-3614358.jpg" alt="8" />
-      </div>
-
-      <!-- Image 9 -->
-      <div class="img-container">
-        <img src="img/small/pexels-jeremy-bishop-2422915.jpg" alt="9" />
-      </div>
-      <!-- Image 10 -->
-      <div class="img-container">
-        <img src="img/small/pexels-jim-long-949859.jpg" alt="10" />
-      </div>
-    </section>
-    <div id="books" class="section-default">
-      <h2>Section Books</h2>
-    </div>
-
-    <div id="students" class="section-default">
-      <h2>Section Students</h2>
-    </div>
-
-    <div id="colors" class="section-default">
-      <h2 id="color-content">Section Color</h2>
-      <p id="color-text"></p>
-      <button id="changecolor" type="submit">
-        Switch
-      </button>
-      <div id="color">
-
-      </div>
-    </div>
-
-    <!-- modal -->
-    <div class="modal" id="modal-1">
-      <img src="img/full/1.jpg" alt="" class="full-img" />
-    </div>
-
-    <div id="btn-top">
-      <h2>^</h2>
     </div>
 
     <script src="app.js"></script>
